Fixed Collect Dialog Position overflow when sample too long

--- a/ui/src/containers/ConfirmCollectDialog.css
+++ b/ui/src/containers/ConfirmCollectDialog.css
@@ -1,5 +1,6 @@
 .collect-confirm-dialog {
   width: 60%;
+  height: 90vh;
 }
 
 #collect-confirm-dialog-popover {
